@startuml
interface FilmElement
class Film
class Area
class Location
FilmElement <|.. Area
FilmElement <|.. Location
Area <|-- Film
Area "1" *-- "0..*" FilmElement
Film --> FilmState
Film --> CrewRoster
FilmElement : +needsClearance()
FilmElement : +markFilmed()
FilmElement : +appendChildren()
FilmIterator ..> FilmElement : traverses
CrewIterator ..> CrewMember : traverses
interface CrewMember
class OnSiteCrew
class OffSiteCrew
abstract class CrewDecorator
class RoleDecorator
CrewMember <|.. OnSiteCrew
CrewMember <|.. OffSiteCrew
CrewMember <|.. CrewDecorator
CrewDecorator <|-- RoleDecorator
CrewDecorator o-- CrewMember
CrewRoster *-- CrewMember
interface FilmState
FilmState <|.. InitialState
FilmState <|.. PendingAreaConfirmationState
FilmState <|.. ReadyForShootState
FilmState <|.. ShootingState
FilmState <|.. VIPMissingState
FilmState <|.. OtherMissingState
FilmState <|.. FinishedState
Film o-- FilmState
@enduml